--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bungee&family=Fugaz+One&family=Lalezar&family=Permanent+Marker&display=swap");
     </style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
